--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/material-bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "axios": "^0.23.0",
     "expo": "~42.0.1",
+    "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
