--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Trabalho-Correto",
-    "slug": "Trabalho-Correto",
+    "name": "StudyBox",
+    "slug": "study-box",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,13 +17,16 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.yourcompany.yourappname",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.yourcompany.yourappname",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
