--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/material-bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "axios": "^0.23.0",
     "expo": "~42.0.1",
+    "expo-clipboard": "^1.1.0",
     "expo-secure-store": "^10.2.0",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
